--- a/Revenue-Management-master/project.json
+++ b/Revenue-Management-master/project.json
@@ -3,20 +3,20 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
+    "RPAProjectDemo_AuditLog": "[1.0.1-alpha.10]",
     "UiPath.Database.Activities": "[1.3.7369.25200]",
-    "UiPath.Excel.Activities": "[2.9.3-beta.1188448]",
+    "UiPath.Excel.Activities": "[2.9.3]",
     "UiPath.GSuite.Activities": "[1.6.0]",
-    "UiPath.Mail.Activities": "[1.8.5]",
+    "UiPath.Mail.Activities": "[1.9.3]",
     "UiPath.PDF.Activities": "[3.3.0]",
-    "UiPath.System.Activities": "[20.4.0]",
-    "UiPath.UIAutomation.Activities": "[20.4.1]",
-    "UiPath.UIAutomationNext.Activities": "[20.6.0-preview]"
+    "UiPath.System.Activities": "[20.10.1]",
+    "UiPath.UIAutomation.Activities": "[20.10.6]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "20.4.1.0",
-  "projectVersion": "1.0.1-alpha.10",
+  "projectVersion": "1.0.1-alpha.15",
   "runtimeOptions": {
     "autoDispose": false,
     "isPausable": true,
